# cpp_labs

./: README.md
common/: run-tests
hw-01_bmp/: .gitignore  Makefile
hw-01_bmp/include/: bmp.autosave.h  bmp.h  stego.h
hw-01_bmp/samples/: key1.txt  key2.txt  keys.txt  mes2.txt  sample.txt
hw-01_bmp/src/: bmp.c  main.c  stego.c
hw-02_huffman/: CMakeLists.txt  README.md
hw-02_huffman/include/: argumentsParsing.h  binaryReader.h  binaryWriter.h  huffmanDecoder.h  huffmanEncoder.h  huffmanError.h  huffmanHeader.h  huffmanTree.h  huffmanTreeNode.h
hw-02_huffman/src/: argumentsParsing.cpp  binaryReader.cpp  binaryWriter.cpp  huffmanDecoder.cpp  huffmanEncoder.cpp  huffmanHeader.cpp  huffmanTree.cpp  huffmanTreeNode.cpp  main.cpp
hw-02_huffman/test/: allSymbolsGenerator.cpp  bigRandomFileGenerator.cpp  doctest.h  testArgumentsParsing.cpp  testBinaryReader.cpp  testBinaryWriter.cpp  testHuffmanDecoder.cpp  testHuffmanEncoder.cpp  testHuffmanHeader.cpp  testSamples.cpp
hw-02_huffman/tests/: 02_decompress.test.args
lab-01_makefile/: Makefile  README.md  SOLUTION.md  lab-01_makefile
lab-01_makefile/include/: algorithm.h  io.h  util.h
lab-01_makefile/src/: algorithm.c  main.c  util.c
lab-02_cstrings/: .gitignore  Makefile
lab-02_cstrings/include/: str.h  test_str.h
lab-02_cstrings/src/: str.c  test.c  test_str.c
lab-03_mergesort/: Makefile
lab-03_mergesort/include/: mergesort.h
lab-03_mergesort/src/: main.c  mergesort.c
lab-04_intrusive-list/: Makefile
lab-04_intrusive-list/include/: clist.h
lab-04_intrusive-list/src/: clist.c  main.c
lab-05_c-io/: Makefile  lab-05_c-io  minus.txt  out.txt
lab-05_c-io/include/: clist.h  point_list.h
lab-05_c-io/src/: clist.c  main.c  point_list.c
lab-06_int-vector/: CMakeLists.txt  README.md
lab-06_int-vector/include/: my_vector.hpp
lab-06_int-vector/src/: my_vector.cpp
lab-07_matrix/: CMakeLists.txt  README.md
lab-07_matrix/include/: matrix.h
lab-07_matrix/src/: matrix.cpp
lab-08_shared-ptr/: CMakeLists.txt
lab-08_shared-ptr/include/: matrix.hpp  shared_ptr.hpp
lab-08_shared-ptr/src/: matrix.cpp  shared_ptr.cpp
lab-09_figures/: CMakeLists.txt
lab-09_figures/include/: Circle.hpp  Figure.hpp  Rectangle.hpp  Scheme.hpp
lab-09_figures/src/: Circle.cpp  Figure.cpp  Rectangle.cpp  Scheme.cpp
lab-10_cppio/: CMakeLists.txt  README.md
lab-10_cppio/include/: bin_manip.h  developer.h  employee.h  employees.h  employees_array.h  sales_manager.h
lab-10_cppio/src/: bin_manip.cpp  developer.cpp  employee.cpp  employees.cpp  employees_array.cpp  main.cpp  sales_manager.cpp
lab-10_cppio/tests/: 00-smoke.test.args
lab-11_vector/: CMakeLists.txt
lab-11_vector/include/: my_vector.hpp  product.hpp  tests.hpp
lab-11_vector/src/: main.cpp
lab-12_exceptions/: CMakeLists.txt
lab-12_exceptions/include/: matrix.h  matrix_exception.h  registers.h
lab-12_exceptions/src/: main.cpp  matrix.cpp  matrix_exception.cpp  registers.cpp
lab-13_array/: CMakeLists.txt
lab-13_array/include/: my_array.h
lab-13_array/src/: main.cpp
lab-14_linq/: README.md
lab-14_linq/include/: linq.hpp
lab-14_linq/src/: CMakeLists.txt  main.cpp
lab-XX_expat/: README.md
